--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "/lib"
   ],
   "dependencies": {
+    "@ethersproject/providers": "^5.4.3",
+    "@urql/core": "^2.1.6",
     "cross-fetch": "^3.1.4",
     "env-cmd": "^10.1.0",
-    "ethers": "^5.4.2",
+    "ethers": "^5.4.4",
+    "graphql": "^15.5.1",
+    "isomorphic-unfetch": "^3.1.0",
     "web3": "^1.4.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/node-fetch": "^2.5.12",
     "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
