--- a/package.json
+++ b/package.json
@@ -10,22 +10,32 @@
     "prepare": "yarn build",
     "test": "env-cmd jest --runInBand",
     "test:silent": "yarn test --silent=true",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "generate-types": "graphql-codegen"
   },
   "files": [
     "/lib"
   ],
   "dependencies": {
     "@ethersproject/providers": "^5.4.3",
-    "@urql/core": "^2.1.6",
+    "axios": "^0.21.1",
     "cross-fetch": "^3.1.4",
     "env-cmd": "^10.1.0",
     "ethers": "^5.4.4",
+    "file-type": "^16.5.3",
+    "form-data": "^4.0.0",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "isomorphic-unfetch": "^3.1.0",
     "web3": "^1.4.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.0.0",
+    "@graphql-codegen/cli": "^2.0.1",
+    "@graphql-codegen/fragment-matcher": "^3.0.0",
+    "@graphql-codegen/introspection": "^2.0.0",
+    "@graphql-codegen/typescript": "^2.0.0",
+    "@graphql-codegen/typescript-operations": "^2.0.1",
     "@types/jest": "^26.0.24",
     "@types/node-fetch": "^2.5.12",
     "jest": "^27.0.6",
