--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": "16.10.x"
   }
 }
