--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "refinable-nft-sdk-test",
-  "version": "1.0.8",
+  "name": "refinable-nft-sdk",
+  "version": "2.0.0",
   "description": "NFT SDK",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "@ethersproject/providers": "^5.4.3",
-    "axios": "^0.21.1",
+    "axios": "^0.23.0",
     "cross-fetch": "^3.1.4",
     "env-cmd": "^10.1.0",
     "ethers": "^5.4.4",
@@ -45,6 +45,6 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": "16.X.x"
+    "node": "^12.20.x"
   }
 }
