--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "/lib"
   ],
   "dependencies": {
-    "@ethersproject/providers": "^5.4.3",
+    "@ethersproject/providers": "^5.4.5",
     "axios": "^0.23.0",
-    "cross-fetch": "^3.1.4",
-    "env-cmd": "^10.1.0",
-    "ethers": "^5.4.4",
+    "encoding": "^0.1.13",
+    "ethers": "^5.4.7",
+    "events": "^3.3.0",
     "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
-    "isomorphic-unfetch": "^3.1.0",
+    "semver": "^7.3.5",
     "web3": "^1.4.0"
   },
   "devDependencies": {
@@ -36,8 +36,11 @@
     "@graphql-codegen/introspection": "^2.0.0",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-operations": "^2.0.1",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.24",
-    "@types/node-fetch": "^2.5.12",
+    "@types/semver": "^7.3.8",
+    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
