--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "refinable-nft-sdk",
-  "version": "2.0.0",
-  "description": "NFT SDK",
+  "name": "@refinableco/refinable-sdk",
+  "version": "1.0.0",
+  "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "license": "MIT",
