--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": "^12.20.x"
+    "node": ">=12.20.x"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
