--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   ],
   "dependencies": {
     "@ethersproject/providers": "^5.4.5",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.280",
+    "@solana/web3.js": "^1.29.2",
     "axios": "^0.23.0",
     "encoding": "^0.1.13",
     "ethers": "^5.4.7",
@@ -26,6 +29,7 @@
     "form-data": "^4.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
+    "moment": "^2.29.1",
     "semver": "^7.3.5",
     "web3": "^1.4.0"
   },
