--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -17,17 +17,16 @@
     "/lib"
   ],
   "dependencies": {
-    "@ethersproject/providers": "^5.4.5",
+    "assert": "^2.0.0",
     "axios": "^0.23.0",
-    "encoding": "^0.1.13",
-    "ethers": "^5.4.7",
-    "events": "^3.3.0",
-    "file-type": "^16.5.3",
+    "buffer": "^6.0.3",
+    "ethers": "^5.4.4",
     "form-data": "^4.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "semver": "^7.3.5",
-    "web3": "^1.4.0"
+    "stream-browserify": "^3.0.0",
+    "web3-utils": "1.3.4"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.0.0",
@@ -39,15 +38,17 @@
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.24",
     "@types/semver": "^7.3.8",
+    "browserify": "^17.0.0",
+    "bufferutil": "^4.0.5",
     "dotenv": "^10.0.0",
+    "encoding": "^0.1.13",
     "env-cmd": "^10.1.0",
     "jest": "^27.0.6",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
-  },
-  "engines": {
-    "node": ">=12.20.x"
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5",
+    "utf-8-validate": "^5.0.7"
   }
 }
