--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,23 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es2015.promise", "dom", "es2015"],
     "target": "es5",
+    "module": "es2015",
+    "moduleResolution": "node",
+
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "module": "commonjs",
     "declaration": true,
     "outDir": "lib",
     "sourceMap": true,
     "rootDir": "src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "lib"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib"
+  ]
 }
