--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "lib": ["es5", "es2015.promise", "dom", "es2015"],
     "target": "es5",
-    "module": "es2015",
-    "moduleResolution": "node",
+    "module": "CommonJS",
 
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
