--- a/package.json
+++ b/package.json
@@ -18,19 +18,38 @@
   ],
   "dependencies": {
     "@ethersproject/providers": "^5.4.5",
+    "@project-serum/serum": "^0.13.52",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.280",
+    "@solana/wallet-adapter-base": "^0.4.1",
+    "@solana/wallet-adapter-react": "^0.7.1",
+    "@solana/wallet-adapter-wallets": "^0.6.1",
     "@solana/web3.js": "^1.29.2",
+    "@welldone-software/why-did-you-render": "^6.0.5",
+    "antd": "^4.16.12",
     "axios": "^0.23.0",
+    "babel-preset-env": "^1.7.0",
+    "bignumber.js": "^9.0.1",
+    "bn.js": "^5.1.3",
+    "borsh": "^0.4.0",
+    "bs58": "^4.0.1",
+    "buffer-layout": "^1.2.0",
+    "crypto-hash": "^1.3.0",
     "encoding": "^0.1.13",
     "ethers": "^5.4.7",
+    "eventemitter3": "^4.0.7",
     "events": "^3.3.0",
     "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
+    "identicon.js": "^2.3.3",
+    "jazzicon": "^1.5.0",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "npm-run-all": "^4.1.5",
     "semver": "^7.3.5",
+    "typescript": "^4.1.3",
     "web3": "^1.4.0"
   },
   "devDependencies": {
@@ -40,11 +59,17 @@
     "@graphql-codegen/introspection": "^2.0.0",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-operations": "^2.0.1",
+    "@types/bn.js": "^5.1.0",
+    "@types/bs58": "^4.0.1",
     "@types/dotenv": "^8.2.0",
+    "@types/identicon.js": "^2.3.0",
     "@types/jest": "^26.0.24",
+    "@types/node": "^12.12.62",
     "@types/semver": "^7.3.8",
+    "arweave-deploy": "^1.9.1",
     "dotenv": "^10.0.0",
     "env-cmd": "^10.1.0",
+    "gh-pages": "^3.1.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
@@ -52,6 +77,6 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": "^12.20.x"
+    "node": ">=12.20.x"
   }
 }
