--- a/package.json
+++ b/package.json
@@ -26,9 +26,30 @@
     "graphql-request": "^3.5.0",
     "semver": "^7.3.5",
     "stream-browserify": "^3.0.0",
-    "web3-utils": "1.3.4"
+    "web3-utils": "1.3.4",
+    "@solana/spl-token": "0.1.6",
+    "@solana/spl-token-registry": "0.2.202",
+    "@solana/wallet-adapter-base": "^0.4.1",
+    "@solana/wallet-adapter-react": "^0.7.1",
+    "@solana/wallet-adapter-wallets": "^0.6.1",
+    "@solana/web3.js": "^1.21.0",
+    "@welldone-software/why-did-you-render": "^6.0.5",
+    "antd": "^4.16.12",
+    "bignumber.js": "^9.0.1",
+    "bn.js": "^5.1.3",
+    "borsh": "^0.4.0",
+    "bs58": "^4.0.1",
+    "buffer-layout": "^1.2.0",
+    "crypto-hash": "^1.3.0",
+    "eventemitter3": "^4.0.7",
+    "identicon.js": "^2.3.3",
+    "jazzicon": "^1.5.0",
+    "lodash": "^4.17.20",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
+    "eslint": "^8.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "@graphql-codegen/add": "^3.0.0",
     "@graphql-codegen/cli": "^2.0.1",
     "@graphql-codegen/fragment-matcher": "^3.0.0",
@@ -49,6 +70,12 @@
     "ts-node": "^10.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
-    "utf-8-validate": "^5.0.7"
+    "utf-8-validate": "^5.0.7",
+    "@types/bn.js": "^5.1.0",
+    "@types/bs58": "^4.0.1",
+    "@types/identicon.js": "^2.3.0",
+    "@types/node": "^12.12.62",
+    "arweave-deploy": "^1.9.1",
+    "gh-pages": "^3.1.0"
   }
 }
