--- a/package.json
+++ b/package.json
@@ -17,55 +17,56 @@
     "/lib"
   ],
   "dependencies": {
-    "assert": "^2.0.0",
-    "axios": "^0.23.0",
-    "buffer": "^6.0.3",
-    "ethers": "^5.4.4",
-    "form-data": "^4.0.0",
-    "graphql": "^15.5.1",
-    "graphql-request": "^3.5.0",
-    "semver": "^7.3.5",
-    "web3-utils": "1.3.4",
     "@solana/spl-token": "0.1.6",
     "@solana/spl-token-registry": "0.2.202",
     "@solana/wallet-adapter-base": "^0.4.1",
     "@solana/web3.js": "^1.21.0",
+    "assert": "^2.0.0",
+    "axios": "^0.23.0",
     "bn.js": "^5.1.3",
     "borsh": "^0.4.0",
     "bs58": "^4.0.1",
+    "buffer": "^6.0.3",
     "buffer-layout": "^1.2.0",
+    "ethers": "^5.4.4",
     "eventemitter3": "^4.0.7",
-    "lodash": "^4.17.20"
+    "form-data": "^4.0.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "semver": "^7.3.5",
+    "web3-utils": "1.3.4"
   },
   "devDependencies": {
-    "eslint": "^8.1.0",
-    "eslint-plugin-node": "^11.1.0",
     "@graphql-codegen/add": "^3.0.0",
     "@graphql-codegen/cli": "^2.0.1",
     "@graphql-codegen/fragment-matcher": "^3.0.0",
     "@graphql-codegen/introspection": "^2.0.0",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-operations": "^2.0.1",
+    "@types/bn.js": "^5.1.0",
+    "@types/bs58": "^4.0.1",
     "@types/dotenv": "^8.2.0",
+    "@types/identicon.js": "^2.3.0",
     "@types/jest": "^26.0.24",
+    "@types/node": "^12.12.62",
     "@types/semver": "^7.3.8",
+    "arweave-deploy": "^1.9.1",
     "browserify": "^17.0.0",
     "bufferutil": "^4.0.5",
     "dotenv": "^10.0.0",
     "encoding": "^0.1.13",
     "env-cmd": "^10.1.0",
+    "eslint": "^8.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "gh-pages": "^3.1.0",
     "jest": "^27.0.6",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
-    "utf-8-validate": "^5.0.7",
-    "@types/bn.js": "^5.1.0",
-    "@types/bs58": "^4.0.1",
-    "@types/identicon.js": "^2.3.0",
-    "@types/node": "^12.12.62",
-    "arweave-deploy": "^1.9.1",
-    "gh-pages": "^3.1.0"
+    "utf-8-validate": "^5.0.7"
   }
 }
