--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "env-cmd jest --runInBand",
     "test:silent": "yarn test --silent=true",
     "test:watch": "yarn test --watch",
-    "generate-types": "graphql-codegen"
+    "generate-types": "graphql-codegen",
+    "build-docs": "typedoc"
   },
   "files": [
     "/lib"
@@ -48,6 +49,7 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.1",
+    "typedoc": "^0.22.7",
     "typescript": "^4.3.5",
     "utf-8-validate": "^5.0.7"
   }
