--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "/lib"
   ],
   "dependencies": {
-    "@solana/spl-token": "0.1.6",
-    "@solana/spl-token-registry": "0.2.202",
-    "@solana/wallet-adapter-base": "^0.4.1",
-    "@solana/web3.js": "^1.21.0",
+    "@metaplex/js": "^4.10.1",
+    "@metaplex-foundation/mpl-auction": "^0.0.2",
+    "@metaplex-foundation/mpl-core": "^0.0.2",
+    "@metaplex-foundation/mpl-metaplex": "^0.0.5",
+    "@metaplex-foundation/mpl-token-metadata": "^0.0.2",
+    "@metaplex-foundation/mpl-token-vault": "^0.0.2",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.1085",
+    "@solana/wallet-adapter-base": "^0.7.1",
+    "@solana/web3.js": "^1.31.0",
     "assert": "^2.0.0",
     "axios": "^0.23.0",
     "bn.js": "^5.1.3",
