--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es2015.promise", "dom", "es2015","es2019"],
+    "lib": [
+      "es5",
+      "es2015.promise",
+      "dom",
+      "es2015",
+      "es2019"
+    ],
     "target": "es5",
     "module": "CommonJS",
     "downlevelIteration": true,
@@ -11,6 +17,7 @@
     "outDir": "lib",
     "sourceMap": true,
     "rootDir": "src",
+    "skipLibCheck": true
   },
   "include": [
     "src"
