--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -12,6 +12,9 @@
     "test:silent": "yarn test --silent=true",
     "test:watch": "yarn test --watch",
     "generate-types": "graphql-codegen"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "files": [
     "/lib"
