--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "yarn build",
-    "test": "env-cmd jest --runInBand",
+    "test": "env-cmd jest --runInBand --detectOpenHandles",
     "test:silent": "yarn test --silent=true",
     "test:watch": "yarn test --watch",
     "generate-types": "graphql-codegen"
@@ -43,7 +43,7 @@
     "dotenv": "^10.0.0",
     "encoding": "^0.1.13",
     "env-cmd": "^10.1.0",
-    "jest": "^27.0.6",
+    "jest": "^27.4.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.1.0",
