--- a/package.json
+++ b/package.json
@@ -23,28 +23,24 @@
     "@metaplex-foundation/mpl-metaplex": "^0.0.5",
     "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
     "@metaplex-foundation/mpl-token-vault": "^0.0.2",
-    "@metaplex/js": "^4.11.6",
+    "@metaplex/js": "^4.11.7",
     "@solana/spl-token": "^0.1.8",
-    "@solana/spl-token-registry": "^0.2.1623",
-    "@solana/wallet-adapter-base": "^0.9.2",
     "@solana/web3.js": "^1.31.0",
     "assert": "^2.0.0",
     "axios": "^0.23.0",
-    "bn.js": "^5.1.3",
+    "bn.js": "5.2.0",
     "borsh": "^0.4.0",
     "bs58": "^4.0.1",
-    "buffer": "^6.0.3",
-    "buffer-layout": "^1.2.0",
-    "ethers": "^5.4.4",
+    "buffer": "~6.0.3",
+    "ethers": "^5.5.3",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
-    "graphql": "^15.5.1",
-    "graphql-request": "^3.5.0",
-    "lodash": "^4.17.20",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
+    "lodash.omit": "^4.5.0",
     "merge-options-default": "^1.0.2",
-    "moment": "^2.29.1",
     "semver": "^7.3.5",
-    "web3-utils": "1.3.4"
+    "web3-utils": "1.7.0"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.0.0",
@@ -73,5 +69,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
     "utf-8-validate": "^5.0.7"
+  },
+  "resolutions": {
+    "buffer": "~6.0.3"
   }
 }
