--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "prepare": "yarn build",
     "test": "jest --runInBand --testPathIgnorePatterns=.*e2e.spec.ts",
-    "test:e2e": "env-cmd jest --runInBand --testPathPattern=.*e2e.spec.ts$",
+    "test:e2e": "env-cmd jest --runInBand --runTestsByPath './tests/e2e'",
     "test:silent": "yarn test --silent=true",
     "test:watch": "yarn test --watch",
     "generate-types": "graphql-codegen"
@@ -24,6 +24,7 @@
     "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
     "@metaplex-foundation/mpl-token-vault": "^0.0.2",
     "@metaplex/js": "^4.11.7",
+    "@project-serum/anchor": "^0.21.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0",
     "assert": "^2.0.0",
@@ -31,7 +32,6 @@
     "bn.js": "5.2.0",
     "borsh": "^0.4.0",
     "bs58": "^4.0.1",
-    "buffer": "~6.0.3",
     "ethers": "^5.5.3",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
@@ -39,6 +39,7 @@
     "graphql-request": "^3.7.0",
     "lodash.omit": "^4.5.0",
     "merge-options-default": "^1.0.2",
+    "safe-buffer": "^5.2.1",
     "semver": "^7.3.5",
     "web3-utils": "1.7.0"
   },
