--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "2.2.0",
+  "version": "2.3.0-next.0",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -50,6 +50,7 @@
     "@graphql-codegen/introspection": "^2.0.0",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-operations": "^2.0.1",
+    "@swc-node/jest": "^1.4.3",
     "@types/bn.js": "^5.1.0",
     "@types/bs58": "^4.0.1",
     "@types/dotenv": "^8.2.0",
@@ -65,7 +66,6 @@
     "env-cmd": "^10.1.0",
     "jest": "^27.4.5",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5",
