--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@metaplex-foundation/mpl-token-vault": "^0.0.2",
     "@metaplex/js": "^4.11.7",
     "@project-serum/anchor": "^0.21.0",
+    "@reservoir0x/sdk": "^0.0.126",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.36.0",
     "assert": "^2.0.0",
