--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "3.1.0-next.3",
+  "version": "3.1.0-next.4",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -41,7 +41,8 @@
     "merge-options-default": "^1.0.2",
     "safe-buffer": "^5.2.1",
     "semver": "^7.3.5",
-    "web3-utils": "^1.7.3"
+    "web3-utils": "^1.7.3",
+    "zod": "^3.17.9"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.0.0",
