--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "3.1.0-next.6",
+  "version": "3.1.0-next.7",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -25,7 +25,7 @@
     "@metaplex-foundation/mpl-token-vault": "^0.0.2",
     "@metaplex/js": "^4.11.7",
     "@project-serum/anchor": "^0.21.0",
-    "@reservoir0x/sdk": "^0.0.126",
+    "@refinableco/reservoir-sdk": "^0.0.126",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.36.0",
     "assert": "^2.0.0",
