--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "3.1.0-next.8",
+  "version": "4.0.0-next.0",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -33,6 +33,7 @@
     "bn.js": "5.2.0",
     "borsh": "^0.4.0",
     "bs58": "^4.0.1",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
