--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -12,23 +12,16 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-${{ github.event.inputs.cacheBustKey }}
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14
+          cache: 'yarn'
 
       - name: Install Node.js dependencies
-        run: yarn --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Tests
         run: yarn test
