--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -20,16 +20,6 @@ jobs:
         run: |
           yarn test
         working-directory: ${{env.working-directory}}
-      - run: yarn publish --access public
+      - run: yarn npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # Setup .npmrc file to publish to GitHub Packages
-      - uses: actions/setup-node@v3
-        with:
-          registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@refinableco'
-      # Publish to GitHub Packages
-      - run: yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
