--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -20,6 +20,6 @@ jobs:
         run: |
           yarn test
         working-directory: ${{env.working-directory}}
-      - run: yarn npm publish --access public
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
