--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refinableco/refinable-sdk",
-  "version": "4.2.14-next.0",
+  "version": "4.2.15-next.0",
   "description": "The Refinable SDK allows you to easily interact with the Refinable Marketplace to mint, sell and buy NFTs",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -48,6 +48,7 @@
     "@types/semver": "^7.3.8",
     "browserify": "^17.0.0",
     "bufferutil": "^4.0.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^10.0.0",
     "encoding": "^0.1.13",
     "env-cmd": "^10.1.0",
